# i18n_langid_codegen

./: .editorconfig  Cargo.toml  README.md  TODO.md
src/: lib.rs
