[package]
name = "i18n_langid_codegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
description = "Function-like proc macro for internationalization"
repository = "https://github.com/lennartkloock/i18n_langid_codegen"
keywords = ["proc-macro", "i18n", "internationalization"]
categories = ["internationalization", "localization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"

serde_yaml = "0.9.21"
convert_case = "0.6.0"

unic-langid = "0.9.1"
